hphp/hack/test/dynamic_view/test_arrays.php.exp
File "test_arrays.php", line 7, characters 3-13:
  dynamic
File "test_arrays.php", line 10, characters 3-13:
  array<^(dynamic)>
File "test_arrays.php", line 11, characters 10-11:
Invalid return type (Typing[4110])
  File "test_arrays.php", line 5, characters 25-27:
  This is an int
  File "test_arrays.php", line 2, characters 10-12:
  It is incompatible with a dynamic value
